# transfermarkt_scrapper

./: .gitignore  Cargo.toml  README.md
src/: driver.rs  league.rs  main.rs  player.rs  team.rs  terminal_helper.rs
