[package]
name = "transfermarkt_scrapper"
version = "0.1.0"
authors = ["yaymalaga <yaymalaga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour_sync = "0.19.1"
serde = "1.0"
serde_json = "1.0"
crossterm = "0.17"
tui = { version = "0.12", default-features = false, features = ['crossterm'] }